2009-06-14  Seiji Zenitani  <zenitani@mac.com>

	* xdisp.c [USE_MAC_TOOLBAR]: Remove obsolete definition for Mac Carbon.

2009-06-11  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (x_get_glyph_overhangs): Fix calculation of right
	overhang for the static composition case.

2009-06-11  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (x_get_glyph_overhangs): Fix calculation of right
	overhang for the automatic composition case.

	* xterm.c (x_compute_glyph_string_overhangs): Handle the automatic
	composition case.

2009-06-10  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (get_next_display_element): When handling wrap-prefix
	and line-prefix, treat \n as a control character (bug#3502).

2009-06-10  Kenichi Handa  <handa@m17n.org>

	* font.c (font_parse_family_registry): Fix for one-char foundry.
	(font_sort_entities): Initialize prefer_prop[FONT_AVGWIDTH_INDEX].

2009-06-09  Dmitry Dzhus  <dima@sphinx.net.ru>  (tiny change)

	* process.c (status_message): Fix handling of multibyte signal
	string (Bug#3499).

2009-06-09  Jim Meyering  <meyering@redhat.com>

	* xfaces.c (Fx_load_color_file): Avoid array bounds error if the
	color name is missing.

2009-06-09  Kenichi Handa  <handa@m17n.org>

	* charset.c (Fmap_charset_chars): In docstring, state clearly that
	FROM-CODE and TO-CODE are codepoints of CHARSET.

2009-06-08  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (ns_use_system_highlight_color): Drop, unused.

2009-06-08  Adrian Robert  <Adrian.B.Robert@gmail.com>

	Changes to support :script/:lang/:otf in NS font driver.
	* nsfont.m (nsfont_escape_name, nsfont_unescape_name)
	(nsfont_get_family, nsfont_char_width): Rename to ns_ prefix to
	indicate not part of font driver interface, and change callers.
	(ns_get_family): Remove pointless null check.
	(nsfont_spec_to_traits, nsfont_fmember_to_entity): Replace with
	ns_spec_to_descriptor, ns_descriptor_to_entity.
	(nsfont_trait_distance, nsfont_make_fontset_for_font): Remove.